Removed --add-modules.